# codex

./: .gitignore  Cargo.toml  README.md  codex  codex-log.toml  init.lua  user_config_template.lua
lua/: codex.lua
lua/telescope/_extensions/: codex.lua
rplugin/python3/: codex.py  node.py
src/: git.rs  lib.rs  main.rs
src/git/: diff.rs  mod.rs  sync.rs
src/node/: date_serde.rs  mod.rs  utils.rs
src/nvim/: mod.rs
src/tree/: mod.rs
src/utils/: mod.rs
tests/: fixtures.rs  test_tree.rs  utils.rs
