[package]
name = "codex"
version = "0.1.0"
authors = ["Noah Lidell <noahlidell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
nvim-rs = { version = "0.2.0", features = ["use_tokio"] }
rmpv = "0.4"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
log-panics = { version = "2.0", features = ["with-backtrace"] }
log4rs = { version = "1.0", features = ["toml_format"]}
chrono = { version = "0.4", features = ["serde"]}
git2 = "0.13"
serde = "1.0.*"
serde_derive = "1.0.*"
toml = "0.5.*"
